Current version (0.4.1-trunk)
	- Fix missing space replacements for tag pages
	- Add some command line variables so that the project can be launched from 
	another repository
	- Add lua fallback at launch
	- Fix lua syntax problems
	- Static pages have lowercase without spaces filenames but normal titles

Version 0.4 (released 2015-06-23)
	- Add documentation about how to create/customize themes
	- Fix a problem on tags that have a simple quote in their name
	- Change Jskomment system to Isso one (Cf. http://posativ.org/isso/)
	- Option "description" is now displayed on minisch/base themes
	- Include markdown.lua to the project so that lua-markdown package is
	useless
	- Add some option on backup tool: prefix, suffix and date format. Delete
	other one like: compress tool and extension
	- Fix a problem with titles. Now we can display japanese titles
	- AUTO_EDIT option by default
	- Make Makefly to be a Lua executable
	- Add new configuration option: AUTO_EDIT
	- Add publication date on RSS feeds

Version 0.3 (released 2014-01-17)
	- Add Makefly version in documentation
	- Complete [p|b]make help command
	- Adapt create post script to be more understandable by the user that use it
	- Adapt create post script to be more understandable by the user that use it
	- Fix problem with accentued chars at post creation
	- Permit to split post's list into multiple ones by using MAX_PAGE var
	- Permit to reverse list of posts with SORT parameter in configuration file
	- Add keywords functionnality for posts
	- Add new global variable for templates: BLOG_AUTHOR, BLOG_COPYRIGHT and
	BLOG_KEYWORDS
	- Permit to add new post without editing any file
	- Improve base theme
	- Add "top of the page" element
	- Add "migratefrom" command to migrate jskomment from an old domain
	- Delete useless theme to be more precise on some ones
	- Fix a problem with date in different languages
	- Improve iframe in posts
	- Default theme: minisch
	- Make Lua scripts translatables