@@ -25,6 +25,8 @@ ISSO_YOUR = Your comment
 ISSO_LABEL = Nickname: 
 ELI_TITLE = Timeline
 ELI_DEFAULT_STATUS = None
+ELI_LOCATION_LABEL = Location:
+ELI_POSTTIME_LABEL = Post time:
 LEGEND_TITLE = Caption
 CONTENT_TITLE = Content
 NAVIGATION_MENU_TITLE = Navigation
