@@ -25,6 +25,8 @@ ISSO_YOUR = Votre commentaire
 ISSO_LABEL = Pseudonyme : 
 ELI_TITLE = Chronologie
 ELI_DEFAULT_STATUS = Aucun
+ELI_LOCATION_LABEL = Lieu : 
+ELI_POSTTIME_LABEL = Publication : 
 LEGEND_TITLE = Légende
 CONTENT_TITLE = Contenu
 NAVIGATION_MENU_TITLE = Navigation
