@@ -1,1 +1,1 @@
-var type="${ELI_TYPE}",user="${ELI_USER}",max=${ELI_MAX},tag="elitimeline",api="${ELI_API}",user_api="users/show/",user_rss="statuses/user_timeline/",group_api="statusnet/groups/show/",group_rss="statusnet/groups/timeline/",api_url=api+user_api,api_rss_url=api+user_rss,img_name="profile_image_url";"group"==type&&(api_url=api+group_api,api_rss_url=api+group_rss,img_name="stream_logo");url=api_url+user+".xml"; function displayResult(){xmlhttp=window.XMLHttpRequest?new XMLHttpRequest:new ActiveXObject("Microsoft.XMLHTTP");xmlhttp.open("GET",url,!1);xmlhttp.send();xmlDoc=xmlhttp.responseXML;userinfo=xmlDoc.getElementsByTagName(type);try{id=userinfo[0].getElementsByTagName("id")[0].childNodes[0].nodeValue}catch(e){id=e}try{img=userinfo[0].getElementsByTagName(img_name)[0].childNodes[0].nodeValue}catch(f){img=""}rss_url=api_rss_url+id+".xml";xmlhttp.open("GET",rss_url,!1);xmlhttp.send();xmlDoc=xmlhttp.responseXML; content='<div id="eli_widget"><header>';""!=img&&(content+='<img src="'+img+'" alt="'+user+'" title="Avatar"/>');content+=" <p>"+user+"</p></header>";for(var b=xmlDoc.getElementsByTagName("statuses").item(0).getElementsByTagName("status"),c=max-1,a=0;a<b.length;a++){try{var d=b[a].getElementsByTagName("statusnet:html").item(0).firstChild.data}catch(g){d=""}content+="<article>"+d+"</article>";c<b.length&&a==c&&(a=b.length)}content+="<footer></footer></div>";document.getElementById(tag).innerHTML=content};window.onload=displayResult ;
+function displayResult(){window.XMLHttpRequest?xmlhttp=new XMLHttpRequest:xmlhttp=new ActiveXObject("Microsoft.XMLHTTP"),xmlhttp.open("GET",url,!1),xmlhttp.send(),xmlDoc=xmlhttp.responseXML,userinfo=xmlDoc.getElementsByTagName(type);try{id=userinfo[0].getElementsByTagName("id")[0].childNodes[0].nodeValue}catch(e){id=e}try{img=userinfo[0].getElementsByTagName(img_name)[0].childNodes[0].nodeValue}catch(e){img=""}rss_url=api_rss_url+id+".xml",xmlhttp.open("GET",rss_url,!1),xmlhttp.send(),xmlDoc=xmlhttp.responseXML,content='<div id="eli_widget"><header>',""!=img&&(content+='<a target= "_blank" href="'+domain+"/"+user+'"><img src="'+img+'" alt="'+user+'" title="Avatar"/></a>'),content+=" <p>"+user+"</p></header>";for(var t=xmlDoc.getElementsByTagName("statuses").item(0).getElementsByTagName("status"),a=max-1,i=0;i<t.length;i++){try{var s="",r="",l="",m="",n="";if("group"==type)var r="@"+t[i].getElementsByTagName("screen_name").item(0).firstChild.data,l=t[i].getElementsByTagName("name").item(0).firstChild.data,m=t[i].getElementsByTagName("profile_image_url_https").item(0).firstChild.data,n=t[i].getElementsByTagNameNS("*","profile_url").item(0).firstChild.data,s='<span class="groupmember"><a class="tooltip" target= "_blank" href="'+n+'"><img alt="Profile" align="left" src="'+m+'" />'+r+" <span>"+l+"</span>  </a>     </span>"}catch(e){var s="",l="",m="",n=""}try{var g=t[i].getElementsByTagNameNS("*","html").item(0).firstChild.data;g=g.replace(g.slice(g.indexOf("<div"),g.indexOf("div>")+4),"")}catch(e){var g=""}try{var o="",p="";if(["image/jpeg","image/gif","image/png","image/svg"].indexOf(t[i].getElementsByTagName("attachments").item(0).getElementsByTagName("enclosure").item(0).getAttribute("mimetype"))>=0)var o=t[i].getElementsByTagName("attachments").item(0).getElementsByTagName("enclosure").item(0).getAttribute("url"),p='<a target= "_blank" href="'+o+'"><img alt="Attachment" src='+o+" /> </a>"}catch(e){var o="",p=""}try{var u="";u=new Date(t[i].getElementsByTagName("created_at").item(0).firstChild.data).toLocaleString(),u='<span class="tooltip">&#x231B;<span>'+posttime_label+" "+u+"</span> </span>"}catch(e){var u=""}try{var c="";c=t[i].getElementsByTagName("user").item(0).getElementsByTagName("location").item(0).firstChild.data,c='<span class="tooltip">&#x2302; <span>'+location_label+" "+c+"</span></span>"}catch(e){var c=""}try{var d="";d=t[i].getElementsByTagName("qvitter_delete_notice").item(0).firstChild.data}catch(e){var d=""}"true"!==d&&(content+="<article>"+s+u+c+"<br />"+g+p+"</article>"),a<t.length&&i==a&&(i=t.length)}content+="<footer></footer></div>",document.getElementById(tag).innerHTML=content}var type="${ELI_TYPE}",user="${ELI_USER}",max=${ELI_MAX},tag="elitimeline",domain="${ELI_API}",location_label="${ELI_LOCATION_LABEL}",posttime_label="${ELI_POSTTIME_LABEL}",api="/api/",user_api="users/show/",user_rss="statuses/user_timeline/",group_api="statusnet/groups/show/",group_rss="statusnet/groups/timeline/",api_url=domain+api+user_api,api_rss_url=domain+api+user_rss,img_name="profile_image_url";"group"==type&&(api_url=domain+api+group_api,api_rss_url=domain+api+group_rss,img_name="stream_logo"),url=api_url+user+".xml",window.onload=displayResult;
